--- a/aiagentbase.ipynb
+++ b/aiagentbase.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4698e36b-02a9-4850-99d5-ecf757b4558a",
    "metadata": {},
    "outputs": [],
@@ -313,7 +313,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a9a833f9-5415-40a2-b216-b5df6aa040e7",
    "metadata": {},
@@ -334,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67561fa1-4d6f-4e0a-b11f-71dbf3d2233e",
+   "id": "916ce35a-a406-4f88-bd6c-c822f5dd6587",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +442,11 @@
     "                    self.parent.log(('step returned:',state, reward, done, info))\n",
     "            self.parent.set_training(False)\n",
     "        def train(self,training_steps):\n",
-    "            self.parent.actor.model.learn(total_timesteps=training_steps)\n",
+    "            try:\n",
+    "                self.parent.actor.model.learn(total_timesteps=training_steps)\n",
+    "            except:\n",
+    "                print('Error during learning')\n",
+    "                self.parent.error=True\n",
     "            self.parent.env.actionO.put(self.parent.env.action_space.sample())\n",
     "            self.parent.set_training(False)\n",
     "            # self.parent.log((self.parent.training,self.parent))\n",
@@ -460,12 +463,20 @@
     "                self.parent.log(('call model put state at time',time))\n",
     "                self.parent.log(('call model waiting for action at time',time))\n",
     "                try: action = self.parent.env.actionO.get()#timeout=5)\n",
-    "                except: action=0\n",
+    "                except: action = self.parent.env.action_space.sample()\n",
     "                self.parent.log(('call model received action at time',time))\n",
     "            else:\n",
     "                state=self.parent.get_win_state(state)\n",
-    "                if not self.parent.training: action, _states = self.model.predict(state,deterministic=True)\n",
-    "                else: action, _states = self.model.predict(state)\n",
+    "                if not self.parent.training: \n",
+    "                    try:\n",
+    "                        action, _states = self.model.predict(state,deterministic=True)\n",
+    "                    except:\n",
+    "                        action = self.parent.env.action_space.sample()\n",
+    "                else: \n",
+    "                    try:\n",
+    "                        action, _states = self.model.predict(state)\n",
+    "                    except:\n",
+    "                        self.parent.env.action_space.sample()\n",
     "            return action\n",
     "        def augment_state(self,state):\n",
     "            if not self.parent.metarl: return state\n",
@@ -522,7 +533,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "metarl",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -537,11 +548,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.0"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "5008e426caa1f5e2a3cabb61a0a32dd514aa39ff1b51b49a9d39831a35b7d2d2"
-   }
   }
  },
  "nbformat": 4,
