--- a/feed_env.ipynb
+++ b/feed_env.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "f4c25b95-eb94-43c5-9537-1af1dede1b22",
    "metadata": {
     "id": "09d59684-93c1-4ba3-9ff5-f7af67b659ee"
@@ -36,7 +36,8 @@
    "source": [
     "class FeedEnv():\n",
     "    def __init__(self,feed,ticker,target=.01,stoploss=.005,txcost=.001,\n",
-    "                 seq_len=50,verbose=True):\n",
+    "                 seq_len=50,verbose=True,t_limit=None):\n",
+    "        self.t_limit=t_limit\n",
     "        self.feed=feed\n",
     "        self.t=target\n",
     "        self.stoploss=stoploss\n",
@@ -51,10 +52,7 @@
     "        self.reset()\n",
     "    \n",
     "    def set_state_cols(self,cols):\n",
-    "        if cols == \"all\":\n",
-    "            self.state_cols = self.feed.data[self.ticker].columns\n",
-    "        else:\n",
-    "            self.state_cols=cols\n",
+    "        self.state_cols=cols\n",
     "    \n",
     "    def set_state_type(self,state_type='dict'):\n",
     "        self.state_type=state_type\n",
@@ -125,7 +123,7 @@
     "        else: \n",
     "            r=self.r\n",
     "            pos=action*r[self.time]\n",
-    "            exit_type=self.episode.exit_episode(self,pos)\n",
+    "            exit_type=self.episode.exit_episode(self,pos,t_limit=self.t_limit)\n",
     "            if pos>0: ret=100*(r[self.time]-pos-r[self.time]*self.txcost)/pos\n",
     "            elif pos<0: ret=100*(abs(pos)-r[self.time]-r[self.time]*self.txcost)/abs(pos)\n",
     "            # ret=ret*100/self.mv\n",
@@ -220,9 +218,10 @@
     "    def env_step(self,action):\n",
     "        return self.env.step(action)\n",
     "    \n",
-    "    def exit_episode(self,env,pos):\n",
+    "    def exit_episode(self,env,pos,t_limit=None):\n",
     "        exit_type='none'\n",
     "        env=self.env\n",
+    "        start_time=env.time\n",
     "        while True:\n",
     "            thresh_met=env.thresh(env.r[env.time],pos)\n",
     "            if self.remote: \n",
@@ -249,10 +248,13 @@
     "            if env.time+1==env.end:\n",
     "                env.done=True\n",
     "                break\n",
-    "            else: \n",
-    "                env.feed.step()\n",
-    "                env.time+=1\n",
-    "                if env.time==env.end: env.done=True\n",
+    "            if t_limit is not None:\n",
+    "                if env.time+1>start_time+t_limit:\n",
+    "                    exit_type='timeout'\n",
+    "                    break\n",
+    "            env.feed.step()\n",
+    "            env.time+=1\n",
+    "            if env.time==env.end: env.done=True\n",
     "            # if env.partial_thresh(env.r[env.time],pos): env.l=-env.t/2\n",
     "        return exit_type\n",
     "\n",
@@ -291,11 +293,19 @@
     "            self.env.time+=1\n",
     "            feed.step()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0e961b3-c65b-4c2f-a337-570b5a80a56c",
+   "metadata": {},
+   "source": [
+    "Develop"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "metarl",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -310,11 +320,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.0"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "5008e426caa1f5e2a3cabb61a0a32dd514aa39ff1b51b49a9d39831a35b7d2d2"
-   }
   }
  },
  "nbformat": 4,
