--- a/gather_results.ipynb
+++ b/gather_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "order = ['01-Dec', '01-Jan', '03-Feb', '02-Mar', '04-Apr', '02-May', '04-Jul', '16-Dec']\n",
+    "order = ['01-Dec', '01-Jan', '03-Feb', '02-Mar', '04-Apr', '02-May', '04-Jul', '16-Dec', 'alldata']\n",
     "order_dict = {order[i]: i for i in range(len(order))}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
     "    model_name = folder\n",
     "    # if model_name == 'real_data_model.pth':\n",
     "    #     continue\n",
-    "    values = [0 for i in range(8)]\n",
+    "    values = [0 for i in range(9)]\n",
     "    for data_folder in os.listdir(os.path.join(base_folder, folder, 'realdata')):\n",
     "        num = [order_dict[k] for k in order_dict if k in data_folder][0]\n",
     "        # print(data_folder, num)\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -114,6 +114,10 @@
        "      <th>7</th>\n",
        "      <td>-0.3±3.3</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>-0.0±2.2</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -127,10 +131,11 @@
        "4           0.1±3.3\n",
        "5           0.2±1.7\n",
        "6           0.0±3.1\n",
-       "7          -0.3±3.3"
+       "7          -0.3±3.3\n",
+       "8          -0.0±2.2"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,6 +144,20 @@
     "df = pd.DataFrame(final_data)\n",
     "df.reindex(sorted(df.columns), axis=1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
