--- a/feed_env.ipynb
+++ b/feed_env.ipynb
@@ -52,7 +52,10 @@
     "        self.reset()\n",
     "    \n",
     "    def set_state_cols(self,cols):\n",
-    "        self.state_cols=cols\n",
+    "        if cols == \"all\":\n",
+    "            self.state_cols = self.feed.data[self.ticker].columns\n",
+    "        else:\n",
+    "            self.state_cols=cols\n",
     "    \n",
     "    def set_state_type(self,state_type='dict'):\n",
     "        self.state_type=state_type\n",
