--- a/rlagents.ipynb
+++ b/rlagents.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "025c06e6-0084-4c86-8bcd-d8a33adc0b41",
    "metadata": {},
    "outputs": [],
@@ -28,19 +28,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d7889ded-dd8c-4c73-aadd-687cf98ddbb0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/rishabh/miniforge3/envs/metarl/lib/python3.11/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import import_ipynb\n",
     "import pandas as pd\n",
@@ -55,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "27681588-e85b-4818-b7f9-9e8aca7d87cf",
    "metadata": {},
    "outputs": [
@@ -78,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "8da69070-9830-44a9-bd5d-0f9800a0c613",
    "metadata": {},
    "outputs": [
@@ -96,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "bd8234fa-666c-4768-a090-b01237918b3b",
    "metadata": {},
    "outputs": [],
@@ -108,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "fd63887a-5eb4-4b8e-a915-47a864cc08f8",
    "metadata": {},
    "outputs": [
@@ -126,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "afea58b9-6c56-40c8-a101-32cba908483e",
    "metadata": {},
    "outputs": [],
@@ -137,10 +128,35 @@
     "        'MOM_30','CMO_14']\n",
     "TA_COLS_MIN=['SMA_10', 'SMA_20','CMO_14']\n",
     "# COLS=['row_num']+OHLCV_COLS+TA_COLS\n",
-    "COLS=['row_num']+OHLCV_COLS+TA_COLS\n",
+    "\n",
+    "with open('additional_utils/cols.pkl', 'rb') as f:\n",
+    "        d = pickle.load(f)\n",
+    "        \n",
+    "COLS=['row_num']+OHLCV_COLS+TA_COLS+d['discrete_cols']+d['pre_discrete_cols']\n",
     "# print('Ha')\n",
     "DIM=len(COLS)\n",
     "GDIM=3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "04784d7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8853"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DIM"
    ]
   },
   {
@@ -286,7 +302,7 @@
    "outputs": [],
    "source": [
     "class RLStratAgentDyn(RLAgent,StratAgent):\n",
-    "    def __init__(self,algoclass,soclass,monclass,myargs=(2048,False),dim=DIM,verbose=1,win=5,metarl=True, use_cols=None):\n",
+    "    def __init__(self,algoclass,soclass,monclass,myargs=(2048,False),dim=DIM,verbose=1,win=5,metarl=True):\n",
     "        action_space=spaces.MultiDiscrete([3,3,3])\n",
     "        n_steps,self.use_alt_data=myargs[0],myargs[1]\n",
     "        if self.use_alt_data:dim=DIM+GDIM\n",
@@ -294,20 +310,17 @@
     "        super().__init__(algoclass,monclass=monclass,action_space=action_space,observation_space=observation_space,\n",
     "                        n_steps=n_steps,verbose=verbose,win=win,soclass=soclass,metarl=metarl)\n",
     "        self.actor.percept_to_state=self.percept_to_state\n",
-    "        if use_cols is not None:\n",
-    "            self.use_cols = use_cols\n",
     "        # self.perception.perceive_reward=self.perceive_reward\n",
     "    def load_model(self,filepath='./saved_models/PPO0.pth'):\n",
     "        self.model.policy.load_state_dict(torch.load(filepath))\n",
     "    def percept_to_state(self,perceived_state):\n",
     "        # self.logL+=[{'printing perceived_state':perceived_state}]\n",
     "        percept=perceived_state['percept']\n",
-    "        cols_to_use = self.use_cols\n",
     "        if self.use_alt_data:\n",
-    "            dstate=torch.tensor(percept[0][cols_to_use].iloc[-1].values)\n",
+    "            dstate=torch.tensor(percept[0][COLS].iloc[-1].values)\n",
     "            gstate=percept[1]\n",
     "            state=torch.concat((dstate,gstate))\n",
-    "        else: state=torch.tensor(percept[cols_to_use].iloc[-1].values)\n",
+    "        else: state=torch.tensor(percept[COLS].iloc[-1].values)\n",
     "        return state\n",
     "    def clear_sar_memory(self):\n",
     "        if len(self.memory.sar_memory)==0: return\n",
